code/dotnet/GlobalFilings/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Global Filings client library for .NET

[![API Version](https://img.shields.io/badge/api-v2.2.1-blue)](https://developer.factset.com/api-catalog/global-filings-api)
[![Nuget](https://img.shields.io/badge/nuget-v3.0.0-orange)](https://www.nuget.org/packages/FactSet.SDK.GlobalFilings/3.0.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)


The Filings API provides a comprehensive set of functionalities for searching and retrieving filing documents from various sources.

This API is designed to expose document search and document retrieval functionality. A document search will allow a request to query FactSet document databases based on certain search criteria specified in the request.

In addition, a document count request will provide information on the number of stories available for a particular security.

The meta endpoints, such as sources, formTypes, timeZones, and categories, provide comprehensive lists of available sources, form types, time zones, and categories, respectively.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.2.1
- SDK version: 3.0.0
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.GlobalFilings -v 3.0.0
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.GlobalFilings -Version 3.0.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.GlobalFilings.Api;
using FactSet.SDK.GlobalFilings.Client;
using FactSet.SDK.GlobalFilings.Model;

namespace Example
{
    public static class GetCountExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.GlobalFilings.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new FilingsAPIApi(config);
            var sources = new List<string>(); // List<string> | Code for document source to include.This is a comma-separated list. Use the `/meta/sources` endpoint to get the list of available sources.  
            var startDate = "20240601";  // string | Start Date. Format is YYYYMMDD or relative +/- days (0,-1,etc).  (optional) 
            var endDate = "20241101";  // string | End Date. Format is YYYYMMDD or relative +/- days (0,-1,etc). (optional) 
            var ids = new List<string>(); // List<string> | Requested symbols or securities.  This is a comma-separated list with a maximum limit of 1000.  Each symbol can be a FactSet exchange symbol,mCUSIP, SEDOL, ISIN, or Entity ID > **Note**: If this parameter is not used should return null for the requestId field in the response (optional) 
            var timeZone = "\"America/New_York\"";  // string | timeZone to return story dates and times.Time zones, represented in POSIX format, are automatically adjusted for daylight savings. timeZone names are sourced from the IANA timezone registry. (optional)  (default to "America/New_York")
            var categories = new List<string>(); // List<string> | Code for categories to include.  This is a comma-separated list. Use the `/meta/categories` endpoint to get the list of available categories.  Default = All categories. (optional) 
            var primaryId = false;  // bool? | Type of identifier search * true - Returns headlines of stories that have the searched identifier(s) as the primary  identifier. * false - Returns headlines of stories that mentioned or referred to the  identifier. (optional)  (default to false)
            var searchText = "Officer";  // string | Restricts the search to include only document stories that include the searched text. This parameter supports boolean operators as well. (optional) 
            var formTypes = new List<string>(); // List<string> | The search to include any form types of given sources (optional) 

            try
            {
                // Returns the count of filings for specified source.
                CountResponse result = apiInstance.GetCount(sources, startDate, endDate, ids, timeZone, categories, primaryId, searchText, formTypes);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling FilingsAPIApi.GetCount: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/content/global-filings/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*FilingsAPIApi* | [**GetCount**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/FilingsAPIApi.md#getcount) | **GET** /count | Returns the count of filings for specified source.
*FilingsAPIApi* | [**GetFilings**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/FilingsAPIApi.md#getfilings) | **GET** /search | Returns the filings documents and related metadata within FactSet coverage.
*MetaApi* | [**GetFormtype**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/MetaApi.md#getformtype) | **GET** /meta/form-types | Returns the form types of specified sources.
*MetaApi* | [**GetSources**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/MetaApi.md#getsources) | **GET** /meta/sources | Returns the sources.
*MetaApi* | [**GetTimezone**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/MetaApi.md#gettimezone) | **GET** /meta/time-zones | Returns the time zones.
*MetaApi* | [**Getcategories**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/MetaApi.md#getcategories) | **GET** /meta/categories | Returns the categories.


## Documentation for Models

 - [Model.Category](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/Category.md)
 - [Model.CategoryResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/CategoryResponse.md)
 - [Model.Count](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/Count.md)
 - [Model.CountResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/CountResponse.md)
 - [Model.Document](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/Document.md)
 - [Model.ErrorObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/ErrorObject.md)
 - [Model.ErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/ErrorResponse.md)
 - [Model.FormType](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/FormType.md)
 - [Model.FormTypeResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/FormTypeResponse.md)
 - [Model.InvalidIdErrorObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/InvalidIdErrorObject.md)
 - [Model.SearchResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/SearchResponse.md)
 - [Model.SearchResponseMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/SearchResponseMeta.md)
 - [Model.SearchResponseMetaPagination](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/SearchResponseMetaPagination.md)
 - [Model.SearchResult](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/SearchResult.md)
 - [Model.Source](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/Source.md)
 - [Model.SourceResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/SourceResponse.md)
 - [Model.TimeZone](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/TimeZone.md)
 - [Model.TimeZoneResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/GlobalFilings/v2/docs/TimeZoneResponse.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
